--- a/www/welcome.html
+++ b/www/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="css/index.css"> <!-- Separate CSS file for this page -->
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="welcome-container">
@@ -11,6 +11,6 @@
         <button id="welcomeLogoutBtn">Logout</button>
     </div>
 
-    <script src="js/welcome.js"></script> <!-- Separate JavaScript file for this page -->
+    <script src="js/welcome.js"></script>
 </body>
 </html>
